# PJATK_PJC_ITN

./: CMakeLists.txt  README.md  Sniezko.cpp  TaskOne.cpp  TaskThree.cpp  TaskTwo.cpp
zad1/: TaskOne.cpp
zad10/: TaskTen.cpp  spec.txt
zad2/: TaskTwo.cpp
zad3/: TaskThree.cpp
zad4/: Sniezko.cpp  TaskFour.cpp  spec.txt
zad5/: TaskFive.cpp  spec.txt
zad6/: TaskSix.cpp  spec.txt
zad7/: spec.txt
zad8/: spec.txt
